# ai_auto_development

./: .gitignore  Makefile  README.md  chat_interface.py  migrate_v2.py  pyproject.toml  run_evaluation.py  test_v2_migration.py  verify_ops_ready.py  vista_agents.db  vista_memory.db  week_0_report.json
.github/workflows/: vista-ci.yml  vista.yml
data/: verification_ledger.db
data/cache/: llm_cache.db  pattern_cache.db  verification_cache.db
data/projects/: blog.json  cli_tool.json  crud_api.json  etl_pipeline.json  lib_fix.json
docs/: conf.py  index.md  installation.md  quickstart.md
docs/api/: compat.md  reference.md
docs/examples/: ai-systems.md  data-pipelines.md  legacy-integration.md  web-apps.md
docs/guide/: best-practices.md  faq.md  migration.md  troubleshooting.md
docs/research/: 350_ai_recursive_agents.txt  350_ai_recursive_agents12.txt  Multi-Agent Relay for Long-Horizon Tasks.md
examples/: blog_app.py
examples/10/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  agents.py  cli.py  config.example.json  config.py  db_manager.py  examples.py  install_utils.py  llm_client.py  orchestrator.py  path_shim.py  requirements.txt  setup.py  test_legacy_timezone.py  test_runner.py
examples/11/: .env  .env.example  README.md  requirements.txt  streamlit_app.py
jules-scratch/verification/: run_gui.py
logs/: test.jsonl
runtime/: baton.json  baton.next.json  builder_raw.json  checkpoint.json
tests/: test_communication.py  test_package.py  test_vista_time.py
vista/: cli.py  config.py
vista_time/: __init__.py  converter.py
(+154 files in other folders)
